<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.book.ViewExpenseFragment">

    <TextView
        android:id="@+id/view_income_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_income_title"
        android:textAlignment="textStart"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/income_table_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861" />

    <LinearLayout
        android:id="@+id/income_table_container"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/income_no_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/uhoh_noincome"
                android:layout_width="379dp"
                android:layout_height="436dp"
                android:layout_weight="1"
                android:contentDescription="@string/no_income"
                android:src="@drawable/no_income" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_income"
                android:textAlignment="center"
                android:textSize="34sp"
                android:textStyle="bold" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/income_yes_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <TableLayout
                android:id="@+id/incomes_table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:stretchColumns="5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.419">

                <!--Table Heading -->

                <TableRow
                    android:background="@color/purple_200">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/inc_id"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="8dp"
                        android:text="@string/inc_amount"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="77dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="8dp"
                        android:text="@string/inc_date"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="127dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="8dp"
                        android:text="@string/inc_source"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="94dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="8dp"
                        android:text="@string/inc_type"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </TableRow>


                <!-- Table Content -->
                <!-- Content Added Dynamically-->


            </TableLayout>
        </LinearLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>